...
const String AccountInfo = 'AccountInfoScreen';
const String OrderListData = 'OrderListScreen';
const String OrderDetailView = 'OrderDetailScreen';
const String OrderPlaced = 'OrderPlacedScreen';
const String WishListDataScreen = 'WishListScreen';
const String AddressList = 'AddressListScreen';
const String Dashboard = 'Dashboard';
const String EditAddress = 'EditAddressScreen';
const String ReviewList = 'ReviewListScreen';
const String AddReviewData = 'AddReviewData';
const String AppLanguage = 'DefaultLang';
const String Currency = 'Currency';
const String CmsContentData = 'Cms Content';
...
