...
      final response = await repository.applyCoupon(event.couponCode);
      if (response.success) {
        emit(
          state.copyWith(
            isLoading: false,
            couponCode: event.couponCode,
            successMessage: response.message ?? 'Coupon applied',
          ),
        );
      } else {
        emit(
          state.copyWith(
            isLoading: false,
...
