...
        .map((e) =>
            AttributeOption.fromJson(e['node'] as Map<String, dynamic>))
        .toList();
  }
}

/// Attribute option (e.g., "XS", "Red", etc.)
class AttributeOption {
  final String id;
  final int? numericId;
  final String? adminName;
  final String? swatchValue;
  final String? swatchValueUrl;
...
