appId: com.webkul.bagisto.mobikul
---
- launchApp
- tapOn: "Login"
- tapOn: "Email"
- inputText: "user@example.com"
- tapOn: "Password"
- inputText: "admin123"
- tapOn: "Sign In"
- assertVisible: "Dashboard"