appId: com.example.bagisto
---
- runFlow: checkout/shipping_methods.yaml
- tapOn: "Cash on Delivery"
- tapOn: "Place Order"
- assertVisible: "Order #"